fix(user-profile): refactored user profile to use primeflex when possible for overflow

--- a/src/app/features/profile/components/profile-information/profile-information.component.scss
+++ b/src/app/features/profile/components/profile-information/profile-information.component.scss
@@ -6,9 +6,3 @@
   border: 1px solid var(--grey-2);
   border-radius: 0.75rem;
 }
-
-.truncate-text {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
